[package]
name = "astra"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Ibraheem Ahmed <ibraheem@ibraheem.ca>"]
description = "A blocking HTTP server built on hyper."
repository = "https://github.com/ibraheemdev/astra"
keywords = ["http", "hyper", "web"]
categories = ["http", "web", "network-programming", "web-programming::http-server"]


[dependencies]
log = "0.4.17"
num_cpus = "1.15.0"
tokio = "1.14.1"
futures-core = "0.3.25"
hyper = { version = "0.14.23", features = ["http1", "http2", "server", "stream"] }
mio = { version = "0.8.5", features = ["os-poll", "net"] }

[dev-dependencies]
matchit = "0.7.0"
