[package]
name = "astra"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Ibraheem Ahmed <ibraheem@ibraheem.ca>"]
description = "A blocking HTTP server built on hyper."
repository = "https://github.com/ibraheemdev/astra"
keywords = ["http", "hyper", "web"]
categories = ["http", "web", "network-programming", "web-programming::http-server"]

[features]
default = []
http2 = ["hyper/http2"]

[dependencies]
log = "0.4"
num_cpus = "1.15.0"
tokio = "1.41"
futures-core = "0.3"
hyper = { version = "0.14.23", features = ["http1", "server", "stream"] }
mio = { version = "1", features = ["os-poll", "net"] }

[dev-dependencies]
matchit = "0.7.0"

# [workspace]
# members = ["astra-web"]
