[package]
name = "astra"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Ibraheem Ahmed <ibraheem@ibraheem.ca>"]
description = "A blocking HTTP server built on hyper."
repository = "https://github.com/ibraheemdev/astra"
keywords = ["http", "hyper", "web"]
categories = ["network-programming", "web-programming::http-server"]

[features]
default = []
http2 = ["hyper/http2", "hyper-util/http2"]

[dependencies]
log = "0.4"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "server"] }
mio = { version = "1", features = ["os-poll", "net"] }
bytes = "1"
http-body-util = "0.1"

[dev-dependencies]
matchit = "0.7.0"

# [workspace]
# members = ["astra-web"]
