[package]
name = "astra-hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
tokio = "1.12.0"
futures-core = "0.3.19"
hyper = { version = "0.14.6", features = ["http1", "http2", "server", "stream"] }
astra = { path = "../astra" }
tracing-subscriber = "0.3.3"

[dev-dependencies]
matchit = "0.4.4"
